[package]
name = "ping-tool"
version = "0.1.0"
description = "Ping tool"
authors = ["mango"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.14"
lettre = "0.11"
url = "2"
tokio = { version = "1", features = ["time"] }
encoding_rs = "0.8"
windows-sys = { version = "0.59", features = ["Win32_Globalization"] }
